# ingeneria-ia

./: 30-03-26-fibonacci-jere  CMakeLists.txt  README.md  gjhgjhg  hello  hello.c
2025S1/C010-matematica-ingreso/: mat-practica-4.py  statistic-graph-2.py  statistic-graph.py
2025S1/E010-economia/: economia-tut-1-1.py  economia-tut-1.py  economia-tut-6.py  economia-tut-7.py  economia-tut-8.py
2025S1/E010-economia/tut/: economia-tut-2-2.py  economia-tut-7-2.py  economia-tut-9-3.py
2025S2/I100-PC/guias/: 3-1-11.py  3-3-2.py  3-3-3.py
2025S2/I100-PC/teorica/: clase2.py
2025S2/I100-PC/tutorial/: 08-27-25-2.py  08-31-25.py
2025S2/I100/TP1-otro/: correccion_muertes.md  ejercicio_1 (2).py  ejercicio_2 (1).py  ejercicio_3 (2).py  errores.md  estado_proyecto.md  explicacion_muertes.md  funciones_limpio (2).py  funciones_limpio.py  reporte_final.md
2025S2/tap-2025/: a.py  g.py  h.py  n.py
2025S2/tests/: test-1.txt  test-2.txt
2026S1/C054/: 13-03-26-equivalencia.py
2026S1/CS50/: agree.c  cat  cat.c  compare.c
2026S1/I200/: .env  03-04-26  03-04-26-diagnostico.c  CMakeLists.txt  algo-challenges.html  algo-v2.html
2026S1/juan/: README.md  index.html  pid-5m.md
2026S1/planning/: phd-recomendations-claude.aux  phd-recomendations-claude.out  phd-recomendations-claude.tex  phd-recomendations-claude.toc
2026S1/taller/: 1646.cpp  26-03.cpp  main
I100/: 20-08-25.py  26-08-25.py  6-8-25.py  prueba.py
I100/TP1/: tp-1.py  tp1_1_osipova.py  tp1_funciones_osipova.py
I100/guias/: 1-11.py  3-3-4.py
I100/jupy/: 27-09-25-2.ipynb
I100/notebooks/: fish.ipynb
I100/teorica/: 27-09-25-2.py  __init__.py
I100/tutorial/: 27-08-25.py  3-09-25-2.py
ciecias/: entrega-3
economia/: economia-tut-7-2.py  economia-tut-7.py  economia-tut-9.py
notebooks/: lecture-1.ipynb
script/: script.py
tap-2025/: i.py  n.py
(+125 files in other folders)
