cmake_minimum_required(VERSION 3.30)
project(ingeneria_ia)

set(CMAKE_CXX_STANDARD 14)

include_directories(2026S1/I200/tp1)

add_executable(ingeneria_ia
    2026S1/CS50/agree.c
    2026S1/CS50/cat.c
    2026S1/CS50/compare.c
    2026S1/CS50/hello.c
    2026S1/I200/clase-de-problemas/clase_de_problemas_2_respuestas.c
    2026S1/I200/practica/24-03-26-torre-hanoi.c
    2026S1/I200/practica/26-03-17.c
    2026S1/I200/practica/26-03-18.c
    2026S1/I200/tp1/testing.c
    2026S1/I200/tp1/testing.h
    2026S1/I200/tp1/tests.c
    2026S1/I200/tp1/tp1.c
    2026S1/I200/tp1/tp1.h
    "2026S1/I200/tutorial/Clase  4 - Listas-20260326/combinar.c"
    "2026S1/I200/tutorial/Clase  4 - Listas-20260326/consecutivos.c"
    "2026S1/I200/tutorial/Clase  4 - Listas-20260326/invertir.c"
    "2026S1/I200/tutorial/Clase  4 - Listas-20260326/listas.c"
    "2026S1/I200/tutorial/Clase  4 - Listas-20260326/nodos.c"
    "2026S1/I200/tutorial/Clase  4 - Listas-20260326/remover_nodo.c"
    2026S1/I200/tutorial/clase-1-alumnos/1-1/1-1.c
    2026S1/I200/tutorial/clase-1-alumnos/1-2/1-2.c
    2026S1/I200/tutorial/clase-1-alumnos/es-bisiesto/es-bisiesto.c
    2026S1/I200/tutorial/clase-1-alumnos/es-par/es-par.c
    2026S1/I200/tutorial/clase-1-alumnos/hello-world.c
    2026S1/I200/tutorial/ejercicio3/01_list_length.c
    2026S1/I200/tutorial/ejercicio3/02_middle_node.c
    2026S1/I200/tutorial/ejercicio3/03_cycle_detection.c
    2026S1/I200/tutorial/ejercicio3/04_sorted_intersection.c
    2026S1/I200/tutorial/nueva-clase-3/ejercicios.c
    2026S1/I200/tutorial/2026-03-04-diagnostico-resolucion.c
    2026S1/I200/tutorial/2026-03-04-diagrostico.c
    2026S1/I200/tutorial/2026-03-12-ejercicios.c
    2026S1/taller/1646.cpp
    2026S1/taller/26-03.cpp)
